syntax = "proto3";

option go_package = "github.com/stateprism/prisma_ca/certificate";

message Certificate {
  bytes name = 1;
  bytes serial = 2;
  optional string description = 3;
  uint64 created_at = 4;
  uint64 valid_from = 5;
  uint64 valid_before = 6;
  string username = 9;
}

message ServerPublicKeyMetadata { bytes parent_cert_id = 1; }

message AuthorizedUser {
  string user_name = 1;
  bytes user_public_key = 2;
  int64 created_at = 3;
  bytes cert_id = 4;
}

message AuthorizedUsers {
  uint64 updated_at = 1;
  map<string, AuthorizedUser> users = 2;
  bytes integrity_hash = 3;
}
